--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
     top:0;
     left: 0;
     width: 100%;
+    background-color: #20232a80;
     box-shadow: 0 0 0.0625rem 0.0625rem #fff8;
 }
 
@@ -26,6 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
   padding: 0 1rem;
 }
 
@@ -75,15 +77,27 @@
   width: 100%;
 }
 
+@media (min-width:768px) {
+  .header-nav__container{
+    max-width: 1024px;
+  }
+}
+
+@keyframes spin {
+  to{
+    transform: rotate(360deg);
+  }
+}
+
 .i-hero {
   position: relative;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   background-image: url('../assets/img/bg-hero-react-galaxy.webp');
   background-position: center;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 .i-hero::before {
@@ -107,26 +121,30 @@
 }
 
 .i-hero__container {
+  z-index: 5;
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
   padding: 0 1rem;
-  z-index: 5;
+  
 }
 
 .i-hero__info-container {
   display: flex;
   flex-direction: column;
   align-items:center ;
-  gap: 1rem;
+  gap: 0.75rem;
+  max-width: 448px;
 }
 
 .i-hero__info-title {
+  font-size: 1.5rem;
   text-align: center;
   margin: 0;
 }
 
 .i-hero__info-subtitle {
+  font-size: 1.25rem;
   text-align: center;
   margin: 0;
 }
@@ -140,44 +158,136 @@
   border: none;
   border-radius: 0.5rem;
   color: #000;
-  font-size: 1rem;
   font-weight: 700;
-  font-family: monospace ;
+  font-size: 0.75rem;
+  font-family: monospace;
   text-decoration: none;
-  padding: 0.25em 1em;
-  text-align: center;
-  cursor:pointer;
-  transition: filter 2.25s;
+  padding: 0.5em 2em;
+  cursor: pointer;
+  /* box-sizing: border-box; */
+  transition: filter 0.25s, box-shadow 0.25s;
 }
 
-.i-hero__info-link::hover {
-  box-shadow: 0 0 0 0  #61dafb;
+.i-hero__info-link:hover {
+  box-shadow: 0 0 0 0.25rem 0  #61dafb;
   filter: brightness(112.5%)
 }
 
 .i-hero__img-container {
   display:flex;
-  flex-direction: row;
   justify-content: center;
 }
   
-
 .i-hero__img-pro-tech-container {
+  position: relative;
+}
+
+.i-hero__img-pro {
+  display: block;
+  background-color: #0004;
+  border-radius: 50%;
+  width: 256px;
+  height: 256px;
+  /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
+}
+
+.i-hero__img-tech-container {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: #fff8;
   margin: 0;
+  animation: spin 10s linear 0s infinite normal none running;
 }
 
-.i-hero__img-pro {
-  background-color: #00000080;
-  border-radius: 50%;
-  width: 25
+.i-hero__img-tech {
+  position: absolute;
+  width: 64px;
+  height: 64px;
 }
 
-.i-hero__img-tech-container {}
+.i-hero__img-tech:nth-child(1) {
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+}
 
-.i-hero__img-tech {}
+.i-hero__img-tech:nth-child(2) {
+  top: 50%;
+  left: 0%;
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.i-hero__img-tech:nth-child(3) {
+  top: 50%;
+  left: 100%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+}
+
+.i-hero__img-tech:nth-child(4) {
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(180deg);
+}
+
+@media (min-width: 768px) {
+  .i-hero__container {
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 0.75rem;
+  }
+
+  /* .i-hero__info-container {
+    gap: 1rem;
+  } */
+
+  .i-hero__info-title {
+    font-size: 1.75rem;
+  }
+
+  .i-hero__info-subtitle {
+    font-size: 1.5rem;
+  }
+
+  .i-hero__info-paragraph {
+    display: flex;
+    font-size: 1.25rem;
+    text-align: center;
+    margin: 0;
+  }
+
+  .i-hero__info-link {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .i-hero__container {
+    max-width: 1024px;
+    padding: 0.75rem;
+  }
+
+  /* .i-hero__info-container {
+    gap: 1rem;
+  } */
+
+  .i-hero__info-title {
+    font-size: 1.75rem;
+  }
+
+  .i-hero__info-subtitle {
+    font-size: 1.5rem;
+  }
+
+  .i-hero__info-paragraph {
+    display: flex;
+    font-size: 1.25rem;
+    text-align: center;
+    margin: 0;
+  }
+
+  .i-hero__info-link {
+    font-size: 1rem;
+  }
+}
