--- a/css/index.css
+++ b/css/index.css
@@ -1,183 +1,310 @@
 :root{
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .body {
-    background-color: #20232a;
-    color:#fff;
-    font-family: monospace;
-    margin: 0;
-    }
+  background-color: #20232a;
+  color:#fff;
+  font-family: monospace;
+  margin: 0;
+  }
 
- .header{
-    position: fixed;
-    z-index: 25;
-    top:0;
-    left: 0;
-    width: 100%;
-    box-shadow: 0 0 0.0625rem 0.0625rem #fff8;
+.header{
+  position: fixed;
+  z-index: 25;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ff143b;
+  box-shadow: 0 0 0.625rem 0.0625rem #0072ad (4, 126, 240, 0.533);
 }
 
 .header-nav{
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .header-nav__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 1rem;
+display: flex;
+align-items: center;
+justify-content: space-between;
+margin: 0 auto;
+padding: 0 5rem;
 }
 
 .header-nav__link-logo-container {
-  display: flex;
+display: flex;
 }
 
 .header-nav__link-logo {
-  width: 108px;
-  height: 32px;
+width: 108px;
+height: 55px;
+right: 10;
 }
 
 .header-nav__menu-list-container {
-  display: flex;
-  gap: 1rem;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+display: flex;
+gap: 1rem;
+margin: 0;
+padding: 0;
+list-style: none;
 }
 
 .header-nav__menu-link {
-  position: relative;
-  color: #fff;
-  font-weight: 700;
-  text-decoration: none;
-  transition: color 0.25s;
+position: relative;
+color: #fff;
+font-weight: 700;
+text-decoration: none;
+transition: color 0.5s;
+font-size: 20px;
 }
 
 .header-nav__menu-link:hover,
 .header-nav__menu-link--active {
-  color: #61dafb;
+color: #61dafb;
 }
 
 .header-nav__menu-link::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -0.125rem;
-  width: 0;
-  height: 0.0625rem;
-  background-color: gold;
-  transition: width 0.25s ease-in-out;
+content: '';
+position: absolute;
+left: 0;
+bottom: -0.125rem;
+width: 0;
+height: 0.0625rem;
+background-color: gold;
+transition: width 0.25s ease-in-out;
 }
 
 .header-nav__menu-link:hover::before,
 .header-nav__menu-link--active::before {
-  width: 100%;
+width: 100%;
+}
+
+.card__header{
+background-color: rgba(33, 36, 44, 10);
+padding: 0.75rem;
+border-radius: 20px;
+}
+.card__header-img-container {
+display: flex;
+overflow: hidden;
+/* width: 256px;
+height: 256px; */
+border-radius: 10px;
+background-color: #0072ad;
+margin: auto;
+}
+
+@media (min-width:768px) {
+.header-nav__container{
+  max-width: 1024px;
+}
+}
+
+@keyframes spin {
+to{
+  transform: rotate(360deg);
+}
 }
 
 .i-hero {
-  position: relative;
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-  background-image: url('../assets/img/bg-hero-react-galaxy.webp');
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
+position: relative;
+display: flex;
+align-items: 0px;
+background-image: url('../assets/img/imagen_2.jpg');
+background-position: 0%;
+background-size: cover;
+height: 100vh;
+overflow: visible;
 }
 
 .i-hero::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #00000040;
+content: '';
+position: absolute;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+background-color: #00000040;
 }
 
 .i-hero::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2rem;
-  background-image: linear-gradient(transparent, #20232a);
+content: '';
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 2rem;
+background-image: linear-gradient(transparent, #20232a);
 }
 
 .i-hero__container {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-  padding: 0 1rem;
-  z-index: 5;
+z-index: 5;
+display: flex;
+flex-direction: column;
+gap: 2.5rem;
+padding: 0 1rem;
+
 }
 
 .i-hero__info-container {
-  display: flex;
-  flex-direction: column;
-  align-items:center ;
-  gap: 1rem;
+display: flex;
+flex-direction: column;
+align-items:center ;
+gap: 0.75rem;
+max-width: 448px;
 }
 
 .i-hero__info-title {
-  text-align: center;
-  margin: 0;
+font-size: 1rem;
+text-align: center;
+margin: 0;
 }
 
 .i-hero__info-subtitle {
-  text-align: center;
-  margin: 0;
+font-size: 1.25rem;
+text-align: center;
+margin: 0;
 }
 
 .i-hero__info-paragraph {
-  display: none;
+display: auto;
 }
 
 .i-hero__info-link {
-  background-color: #61dafb;
-  border: none;
-  border-radius: 0.5rem;
-  color: #000;
-  font-size: 1rem;
-  font-weight: 700;
-  font-family: monospace ;
-  text-decoration: none;
-  padding: 0.25em 1em;
-  text-align: center;
-  cursor:pointer;
-  transition: filter 2.25s;
+background-color: #ff143b;
+border: none;
+border-radius: 0.5rem;
+color: #fff;
+font-weight: 700;
+font-size: 0.75rem;
+font-family: monospace;
+text-decoration: none;
+padding: 0.5em 2em;
+cursor: pointer;
+/* box-sizing: border-box; */
+transition: filter 0.25s, box-shadow 0.25s;
 }
 
-.i-hero__info-link::hover {
-  box-shadow: 0 0 0 0  #61dafb;
-  filter: brightness(112.5%)
+.i-hero__info-link:hover {
+box-shadow: 0 0 0 0.25rem 0  #61dafb;
+filter: brightness(112.5%)
 }
 
 .i-hero__img-container {
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
+display:flex;
+justify-content: center;
 }
-  
 
 .i-hero__img-pro-tech-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #fff8;
-  margin: 0;
+position: relative;
 }
 
 .i-hero__img-pro {
-  background-color: #00000080;
-  border-radius: 50%;
-  width: 25
+display: block;
+background-color: #0004;
+border-radius: 50%;
+width: 256px;
+height: 256px;
+/* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
 }
 
-.i-hero__img-tech-container {}
+.i-hero__img-tech-container {
+position: absolute;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+margin: 0;
+animation: spin 10s linear 0s infinite normal none running;
+}
 
-.i-hero__img-tech {}
+.i-hero__img-tech {
+position: absolute;
+width: 64px;
+height: 64px;
+}
+
+.i-hero__img-tech:nth-child(1) {
+top: 100%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(0deg);
+}
+
+.i-hero__img-tech:nth-child(2) {
+top: 50%;
+left: 0%;
+transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.i-hero__img-tech:nth-child(3) {
+top: 50%;
+left: 100%;
+transform: translate(-50%, -50%) rotate(-90deg);
+}
+
+.i-hero__img-tech:nth-child(4) {
+top: 0%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(180deg);
+}
+
+@media (min-width: 768px) {
+.i-hero__container {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0.75rem;
+}
+
+/* .i-hero__info-container {
+  gap: 1rem;
+} */
+
+.i-hero__info-title {
+  font-size: 1.75rem;
+}
+
+.i-hero__info-subtitle {
+  font-size: 1.5rem;
+}
+
+.i-hero__info-paragraph {
+  display: flex;
+  font-size: 1.25rem;
+  text-align: center;
+  margin: 0;
+}
+
+.i-hero__info-link {
+  font-size: 1rem;
+}
+}
+
+@media (min-width: 768px) {
+.i-hero__container {
+  max-width: 1024px;
+  padding: 0.75rem;
+}
+
+/* .i-hero__info-container {
+  gap: 1rem;
+} */
+
+.i-hero__info-title {
+  font-size: 1.75rem;
+}
+
+.i-hero__info-subtitle {
+  font-size: 1.5rem;
+}
+
+.i-hero__info-paragraph {
+  display: flex;
+  font-size: 1.25rem;
+  text-align: center;
+  margin: 0;
+}
+
+.i-hero__info-link {
+  font-size: 1rem;
+}
+}
