--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,8 @@
     top:0;
     left: 0;
     width: 100%;
+
+    background-color: #20232a80;
     box-shadow: 0 0 0.0625rem 0.0625rem #fff8;
 }
 
@@ -26,6 +28,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  margin: 0 auto;
+
   padding: 0 1rem;
 }
 
@@ -75,6 +80,18 @@
   width: 100%;
 }
 
+@media (min-width:768px) {
+  .header-nav__container{
+    max-width: 1024px;
+  }
+}
+
+@keyframes spin {
+  to{
+    transform: rotate(360deg);
+  }
+}
+
 .i-hero {
   position: relative;
   display: flex;
@@ -84,6 +101,7 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 .i-hero::before {
@@ -134,14 +152,14 @@
 }
 
 .i-hero__info-paragraph {
-  display: auto;
+  display: none;
 }
 
 .i-hero__info-link {
-  background-color: #ff143b;
+  background-color: #61dafb;
   border: none;
   border-radius: 0.5rem;
-  color: #fff;
+  color: #000;
   font-weight: 700;
   font-size: 0.75rem;
   font-family: monospace;
